style: Fix the search bar overflow on smaller screen size

--- a/src/components/Nav/LocationForm/InputForm/InputForm.css
+++ b/src/components/Nav/LocationForm/InputForm/InputForm.css
@@ -12,6 +12,7 @@
 	outline: none;
 	border: none;
 	background-color: inherit;
+	width: 100%;
 }
 
 .location-form__input::placeholder {
